Had to add unirest gem to get metacritic to work

--- a/app/views/metacritic/index.html.erb
+++ b/app/views/metacritic/index.html.erb
@@ -1,2 +1,4 @@
-<h1>Metacritic#index</h1>
-<p>Find me in app/views/metacritic/index.html.erb</p>
+<!-- <h1>Metacritic search</h1>
+<p>please enter http://localhost:3000/metacritic/< Game Name > <br>
+  You will be redirected to this page if no reults are found</p> -->
+  <%=@response.headers %>
